--- a/sauraav-portfolio-site/sauraav-portfolio-site/Views/Shared/_Layout.cshtml
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/Views/Shared/_Layout.cshtml
@@ -101,8 +101,7 @@
 <body class="hide-header">
     <div class="neon-line"></div>
     <div class="hover-area"></div>
-
-    <header>
+@*    <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">sauraav_portfolio_site</a>
@@ -125,8 +124,7 @@
                 </div>
             </div>
         </nav>
-    </header>
-
+    </header>  *@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
