--- a/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/projects_section.css
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/projects_section.css
@@ -13,6 +13,7 @@
     overflow: hidden;
     border-radius: 0px 90px 0px 90px !important;
     min-height: 400px;
+    box-shadow: 10px 10px 0 rgba(255, 255, 255, 1);
 }
 
 .preview-content {
