--- a/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/stars_bg.css
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/stars_bg.css
@@ -28,7 +28,7 @@ html, body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: black;
+    background: #121212;
     overflow: hidden;
     z-index: -1;
     pointer-events: none;
