--- a/sauraav-portfolio-site/sauraav-portfolio-site/Views/Home/Index.cshtml
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/Views/Home/Index.cshtml
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="~/css/education_section.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/summary_section.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/skills_section.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/section_styles.css" asp-append-version="true" />
 </head>
 <body>
     <div class="starfield-container" id="myStarfield"></div>
@@ -232,6 +233,11 @@
                 </div>
             </div>
         </div>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <button class="scroll-button cyber-button" onclick="scrollToSection('section7')">
             <i class="fas fa-chevron-down"></i>
         </button>
@@ -310,5 +316,7 @@
     <script src="~/js/education_section.js" asp-append-version="true"></script>
     <script src="~/js/summary_section.js" asp-append-version="true"></script>
     <script src="~/js/skills_section.js" asp-append-version="true"></script>
+    <script src="~/js/section_animations.js" asp-append-version="true"></script>
+
 </body>
 </html>
